<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:viewBindingIgnore="true"
    android:layout_height="match_parent"
    tools:context=".UserInterface.BirthdayGreetingApp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/greeting_image"
        android:scaleType="centerCrop"
        android:src="@drawable/birthdayparty" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif-light"
        android:padding="20dp"
        android:text="@string/greetng_to"
        android:textColor="@android:color/white"
        android:textSize="36sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="sans-serif-light"
        android:padding="20dp"
        android:text="@string/greeting_from"
        android:textColor="@android:color/white"
        android:textSize="36sp" />

</RelativeLayout>