<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".UserInterface.UserInterfaceMain">

    <include layout="@layout/title_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/earthquake_app_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="#FFB74D"
                android:elevation="4dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="32dp"
                android:text="@string/earthquake_app"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tab_SelfGreeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="#BA68C8"
                android:elevation="4dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="32dp"
                android:text="@string/tab_text_new_year_greeting_card"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tab_ProjectRubric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="#4DB6AC"
                android:elevation="4dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="32dp"
                android:text="@string/tab_text_project_rubric"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>